Corrected compilation error, updated api.yml to newer version with corrections in DTO schemas
