# src/main/java/com/gd/clinic/controller/AdminController.java
@@ -1,7 +1,10 @@
 package com.gd.clinic.controller;
 
 import com.gd.clinic.api.AdminApi;
+import com.gd.clinic.model.CredentialsDto;
+import com.gd.clinic.model.NewUserDto;
 import com.gd.clinic.model.TreatmentDto;
+import com.gd.clinic.model.UserResponseDto;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -9,8 +12,14 @@ import java.util.List;
 
 @RestController
 public class AdminController implements AdminApi {
+
     @Override
-    public ResponseEntity<List<TreatmentDto>> getAllTreatments() {
+    public ResponseEntity<UserResponseDto> createUser(NewUserDto newUserDto) {
+        return null;
+    }
+
+    @Override
+    public ResponseEntity<Void> login(CredentialsDto credentialsDto) {
         return null;
     }
 }
