# src/main/resources/static/api.yml
@@ -11,6 +11,8 @@ tags:
     description: Available commands for doctors
   - name: Nurses
     description: Available commands for nurses
+  - name: Admin
+    description: Available commands for admin / auth
 paths:
   /treatments:
     get:
@@ -124,7 +126,7 @@ paths:
       parameters:
         - name: patientId
           in: path
-          description: The patient's unqiue identifier found on the Patients table.
+          description: The patient's unique identifier found on the Patients table.
           required: true
           schema:
             type: string
@@ -331,6 +333,41 @@ paths:
       responses:
         '200':
           description: Successfully canceled event
+  /users:
+    post:
+      tags:
+        - Admin
+      summary: Create new user
+      description: ''
+      operationId: createUser
+      requestBody:
+        description: User Object that will be passed for creation
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewUser'
+      responses:
+        '200':
+          description: Successfully created user
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UserResponse'
+  /auth/login:
+    post:
+      tags:
+        - Admin
+      summary: Authenticate with given username and password
+      description: ''
+      operationId: login
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Credentials'
+      responses:
+        '200':
+          description: Auth token in response header -> "authorization:"
 components:
   schemas:
     Patient:
@@ -508,19 +545,21 @@ components:
           type: string
           example: Doe
           description: The user's last name
+        userName:
+          type: string
+          example: aolvera
+          description: The user's login identifier
         password:
           type: string
           format: password
           example: ao12!B45
           description: The user's password
         role:
-          type: string
-          example: admin
+          type: array
+          items:
+            type: string
+          example: [admin, doctor]
           description: User's authorization level
-          enum:
-            - admin
-            - doctor
-            - nurse
     UserResponse:
       properties:
         id:
@@ -553,13 +592,21 @@ components:
           example: "drDooLittle"
           description: Username of this user's creator
         role:
-          type: string
-          example: admin
+          type: array
+          items:
+            type: string
+          example: [admin, doctor]
           description: User's authorization level
-          enum:
-            - admin
-            - doctor
-            - nurse
+    Credentials:
+      properties:
+        username:
+          type: string
+          example: jPerez
+          description: The user's ID
+        password:
+          type: string
+          example: ASsda233F2!
+          description: The user's password
   requestBodies:
     Patient:
       description: Patient object that will be added to the database
